feat(runtime): integrate NATS JetStream client
- Add helix-core dependency to helix-runtime.
- Implement basic NatsClient with connect and ensure_stream methods.
- Update client methods to use async-nats 0.38 API (create_stream, get_stream, create_consumer, fetch.messages).
- Add chrono, uuid, futures dependencies to helix-runtime.
- Fix clippy warnings (unused imports/vars, missing docs).
- Apply cargo fmt.

--- a/crates/helix-runtime/Cargo.toml
+++ b/crates/helix-runtime/Cargo.toml
@@ -13,6 +13,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 async-nats = { workspace = true } # Inherit from workspace
+chrono = { version = "0.4", features = ["serde"] } # Added dependency
+uuid = { version = "0.8", features = ["v4", "serde"] } # Added dependency
+futures = "0.3" # Added dependency for TryStreamExt
 
 # Add specific runtime dependencies like tokio, nats, etc. later
 
