--- a/crates/helix-core/Cargo.toml
+++ b/crates/helix-core/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2021"
 # Add core dependencies here, e.g., tokio, serde, tracing, etc.
 tokio = { version = "1", features = ["full"] } # Keep explicit for now
 async-trait = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
+thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "1.8", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
 tracing = { workspace = true }
-thiserror = { workspace = true }
-chrono = { workspace = true }
-uuid = { version = "1.8", features = ["v4", "serde"] } # Keep explicit for now
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
