feat: Add comprehensive license compliance for Apache-2.0
- Added Apache-2.0 license declaration to Cargo.toml files
- Added license headers to core source files
- Created THIRD_PARTY_LICENSES.md for RISC Zero attribution
- Ensured full compliance with Apache-2.0 license terms
- Documented license compatibility and attribution requirements

Maintains compliance with RISC Zero zkVM licensing requirements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ members = [
     "crates/helix-agent-sdk-macros", # Added new macros crate
     # Add other core crates as needed
 ]
+
+[workspace.package]
+license = "Apache-2.0"
+repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
+edition = "2021"
 resolver = "2"
 
 [workspace.dependencies]
