feat: Complete license compliance audit and remediation
- Added Apache-2.0 license declarations to all 13 Cargo.toml files
- Added comprehensive license headers to all 87 Rust source files
- Ensured consistent copyright attribution (2024 Helix Platform)
- Verified full compliance with Apache-2.0 license requirements
- Maintained compatibility with RISC Zero zkVM licensing terms

All files now have proper license attribution and compliance.

--- a/crates/helix-agent-sdk-macros/Cargo.toml
+++ b/crates/helix-agent-sdk-macros/Cargo.toml
@@ -2,6 +2,9 @@
 name = "helix-agent-sdk-macros"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+description = "Procedural macros for the Helix agent SDK"
+repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
 
 [lib]
 proc-macro = true
