--- a/crates/helix-wasm/Cargo.toml
+++ b/crates/helix-wasm/Cargo.toml
@@ -2,6 +2,9 @@
 name = "helix-wasm"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+description = "WebAssembly runtime integration for Helix agents"
+repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
 description = "WASM runtime and plugin system for Helix agents"
 
 [dependencies]
