--- a/crates/helix-llm/Cargo.toml
+++ b/crates/helix-llm/Cargo.toml
@@ -2,6 +2,9 @@
 name = "helix-llm"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+description = "Large language model integration for Helix platform"
+repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
 description = "LLM integration and natural language processing for Helix agents"
 
 [dependencies]
