--- a/crates/helix-llm/Cargo.toml
+++ b/crates/helix-llm/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 license = "Apache-2.0"
 description = "Large language model integration for Helix platform"
 repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
-description = "LLM integration and natural language processing for Helix agents"
 
 [dependencies]
 helix-core = { path = "../helix-core" }
@@ -23,6 +22,7 @@ reqwest = { workspace = true }
 # hf-hub = { workspace = true }       # Commented out for now
 # tokenizers = { workspace = true }   # Commented out for now
 regex = { workspace = true }
+once_cell = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
 uuid = { workspace = true }
