feat: support prompt files for Quint translator

--- a/crates/helix-llm/Cargo.toml
+++ b/crates/helix-llm/Cargo.toml
@@ -3,9 +3,8 @@ name = "helix-llm"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
-description = "Large language model integration for Helix platform"
-repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
 description = "LLM integration and natural language processing for Helix agents"
+repository = "https://github.com/TheDarkLightX/Helix-A-Next-Gen-Event-Driven-Multi-Agent-Platform"
 
 [dependencies]
 helix-core = { path = "../helix-core" }
@@ -27,6 +26,7 @@ chrono = { workspace = true }
 futures = { workspace = true }
 uuid = { workspace = true }
 base64 = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
