--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ base64 = "0.22"
 url = "2.5"
 sha2 = "0.10"
 futures = "0.3"
+clap = { version = "4", features = ["derive"] }
 
 [profile.release]
 lto = true
