--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ wasmtime-wasi = "24.0"
 # Rule engine and pattern matching
 # rete = "0.3"           # Commented out for now
 regex = "1.10"
+once_cell = "1.19"
 # cron = "0.12"          # Commented out for now
 
 # Additional utilities
@@ -71,6 +72,7 @@ base64 = "0.22"
 url = "2.5"
 sha2 = "0.10"
 futures = "0.3"
+clap = { version = "4", features = ["derive"] }
 
 [profile.release]
 lto = true
